# at-bus-load

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  get_API_data.py  pyproject.toml
.github/: python_check.yml
.github/workflows/: build_push_docker_image_to_gcp  build_push_docker_image_to_gcp.yml  python_check.yml
docs/: pydantic_validation.md
excalidraw/: Viz Stat At bus.excalidraw
notebooks/: data_explo.ipynb
src/at_bus_load/: __init__.py  check_gcs.py  entrypoints_params.py  gcp.py  get_API_data.py  get_at_api_data.py  models.py  move_gcs_data_to_bq.py  second_entrypoint.py
src/notebooks/: data_explo.ipynb
tests/: README.md  __init__.py  conftest.py  test_entrypoints_params.py  test_gcp.py  test_get_at_api_data.py  test_models.py  test_move_gcs_data_to_bq.py
