[project]
name = "at-bus-load"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
    "google-cloud-storage>=3.1.0",
    "loguru>=0.7.3",
    "mypy>=1.16.1",
    "nb-clean>=4.0.1",
    "notebook>=7.4.3",
    "pandas>=2.3.0",
    "plotly[express]>=6.1.2",
    "polars>=1.30.0",
    "pyarrow>=20.0.0",
    "python-dotenv>=1.1.0",
    "requests>=2.32.4",
    "ruff>=0.11.13",
]

[project.scripts]
python_entrypoint = "at_bus_load.second_entrypoint:main"
check_gcs = "at_bus_load.check_gcs:main"

[tool.uv]
package = true