[project]
name = "at-bus-load"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
    "google-api-python-client-stubs>=1.29.0",
    "google-cloud-bigquery>=3.34.0",
    "google-cloud-storage>=3.1.1",
    "loguru>=0.7.3",
    "mypy>=1.16.1",
    "nb-clean>=4.0.1",
    "notebook>=7.4.3",
    "pandas>=2.3.0",
    "plotly[express]>=6.1.2",
    "polars>=1.30.0",
    "pyarrow>=20.0.0",
    "python-dotenv>=1.1.0",
    "requests>=2.32.4",
    "ruff>=0.11.13",
    "types-requests>=2.32.4.20250611",
    "typer>=0.12.0",
    "pytest>=8.0.0",
    "pytest-mock>=3.12.0",
    "pytest-cov>=5.0.0",
    "responses>=0.24.0",
    "pydantic>=2.11.7",
]

[project.scripts]
check_gcs = "at_bus_load.check_gcs:entrypoint"
get_at_api_data = "at_bus_load.get_at_api_data:entrypoint"
move_gcs_data_to_bq = "at_bus_load.move_gcs_data_to_bq:entrypoint"


[tool.uv]
package = true

[tool.mypy]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=src/at_bus_load",
    "--cov-report=term-missing",
    "--cov-report=html",
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "slow: Slow running tests",
]
